# vdm-safety-ai-agent

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  research.yml  story.yml
.github/workflows/: ci.yml
app/: __init__.py  config.py
app/api/: dependencies.py  main.py  router.py
app/api/v1/: documents.py
app/schemas/: documents.py
app/services/: container.py  document_factory.py  document_query_service.py  document_registry.py  ingest_models.py  ingest_service.py  metadata_extractor.py  protocols.py  source_inspector.py
docs/architecture/: api-contracts.md  application-models.md  data-model.md  dependency-wiring.md  domain-values.md  ingest-domain.md  ingestion-flow.md  metadata-extraction.md  service-layer.md  source-inspection.md  system-design.md
tests/unit/: test_api_dependencies.py  test_document_factory.py  test_document_query_service.py  test_documents.py  test_health.py  test_ingest.py  test_ingest_service.py  test_ingest_service_with_fake_registry.py  test_metadata_extractor.py  test_source_inspector.py
